--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,12 +1,17 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list>
-            
+        <app-recipe-list
+         (recipeWasSelected)="selectedRecipe = $event">
         </app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail>
-
-        </app-recipe-detail>
+        <app-recipe-detail 
+        *ngIf="selectedRecipe; else infoTex">
+        [recipe]="selectedRecipe"      </app-recipe-detail>
+        
+        <ng-template #infoTex>
+            <p>Please Select Recipe</p>
+        </ng-template>
+       
     </div>
 </div>
