--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group "
+    appDropdown>
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
@@ -31,9 +32,9 @@
   </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        {{recipe.desciption}} 
-    </div>
+  <div class="col-xs-12">
+    {{ recipe.description }}
+  </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
